--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wdpui",
+  "name": "react-tl",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -21,55 +21,57 @@
       "^.+\\.(css|scss)$": "identity-obj-proxy"
     }
   },
-  "author": "Kirti Kishan",
+  "author": "Deep",
   "dependencies": {
-    "axios": "^0.15.3",
+    "axios": "^0.19.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^6.2.10",
+    "babel-loader": "^8.0.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.22.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "body-parser": "^1.16.0",
+    "body-parser": "^1.19.0",
     "css-loader": "^2.1.1",
-    "express": "^4.14.0",
-    "html-webpack-plugin": "^2.26.0",
+    "express": "^4.16.4",
+    "html-webpack-plugin": "^3.2.0",
     "json-server": "^0.14.2",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "nodemon": "^1.19.0",
-    "react": "15.4.2",
+    "react": "^16.8.6",
     "react-bem-helper": "^1.4.1",
-    "react-dom": "15.6.2",
-    "react-redux": "^5.0.6",
-    "react-router": "3.0.2",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
-    "style-loader": "0.13.1",
-    "webpack": "2.2.0",
-    "webpack-dev-middleware": "1.9.0"
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
+    "react-router": "^5.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.30.0",
+    "webpack-dev-middleware": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
-    "babel-eslint": "^8.0.2",
-    "babel-jest": "^24.7.1",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.8.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-15": "^1.4.0",
-    "enzyme-to-json": "^3.2.2",
-    "eslint": "^4.10.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-react": "^7.4.0",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^1.1.5",
+    "enzyme-to-json": "^3.3.5",
+    "eslint": "^5.16.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-react": "^7.13.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^3.0.1",
     "identity-obj-proxy": "^3.0.0",
     "image-webpack-loader": "^4.6.0",
-    "jest": "^24.7.1",
+    "jest": "^24.8.0",
     "less": "^3.9.0",
-    "less-loader": "^4.0.5",
+    "less-loader": "^5.0.0",
     "react-addons-test-utils": "^15.6.2",
-    "react-test-renderer": "^15.6.2",
+    "react-test-renderer": "^16.8.6",
     "redux-logger": "^3.0.6",
-    "url-loader": "^0.6.2"
+    "url-loader": "^1.1.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1"
   }
 }
